--- a/.github/workflows/email_sender.yml
+++ b/.github/workflows/email_sender.yml
@@ -26,6 +26,6 @@ jobs:
                 WORKFLOW_NAME: ${{ github.workflow }}
                 REPO_NAME: ${{ github.repository }}
                 WORKFLOW_RUN_ID: ${{ github.run_id }}
-                SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
+                # SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
                 SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
                 RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
