--- a/.github/workflows/email_sender.yml
+++ b/.github/workflows/email_sender.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
     send_email:
-        runs-on: ununtu-latest
+        runs-on: ubuntu-latest
         steps:
             - name: "checkout code"
               uses: action/checkout@v2
@@ -18,7 +18,7 @@ jobs:
             - name: "Install dependencies"
               run: |
                 python -m pip install --upgrade pip
-                pip install smtplib email
+                # pip install smtplib email
 
             - name: "send email by python script"
               run: python mailer.py
