--- a/.github/workflows/email_sender.yml
+++ b/.github/workflows/email_sender.yml
@@ -8,17 +8,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: "checkout code"
-              uses: action/checkout@v2
+              uses: actions/checkout@v2
 
             - name: "setup python env"
-              uses: action/setup-python@v2
+              uses: actions/setup-python@v2
               with:
                 python-version: '3.x'
             
             - name: "Install dependencies"
               run: |
                 python -m pip install --upgrade pip
-                # pip install smtplib email
 
             - name: "send email by python script"
               run: python mailer.py
